# kinematic_objectives

./: CMakeLists.txt  Doxyfile  README.md  algorithm.cpp  algorithm.hpp  baerlocher_algorithm.cpp  baerlocher_algorithm.hpp  base_waypoint.cpp  base_waypoint.hpp  cairo_drawable.cpp  cairo_drawable.hpp  demo1.cpp  demo2.cpp  demo3.cpp  demo4.cpp  distance_api.hpp  elastic.cpp  elastic.hpp  elastic_gtk.cpp  example_distance_api.cpp  example_distance_api.hpp  example_interactive_elastic.cpp  example_interactive_elastic.hpp  example_orientation_control.cpp  example_orientation_control.hpp  example_robot.cpp  example_robot.hpp  example_waypoints.cpp  example_waypoints.hpp  joint_limit_constraint.cpp  joint_limit_constraint.hpp  joint_limits.cpp  joint_limits.hpp  kinematic_elastic.cpp  kinematic_elastic.hpp  mainpage.dox  mistry_algorithm.cpp  mistry_algorithm.hpp  model.cpp  model.hpp  (+29 more)
attic/: algorithm_1_2.hpp  algorithm_3.hpp  demo4.cpp  joint_damping_objective.cpp  link_position_objective.cpp  mistry_algorithm.cpp  mistry_algorithm.hpp  point_mindist_constraint.cpp  point_mindist_constraint.hpp  task_dump_dbg.cpp  test_baerlocher_algorithm.cpp  tstswap.cpp
demo/: CMakeLists.txt  cairo_drawable.h  demo.cpp  demo_compound_objectives.cpp  demo_compound_objectives.h  elastic_gtk.cpp  example_distance_api.cpp  example_interactive_elastic.cpp  example_interactive_elastic.hpp  example_orientation_control.cpp  example_orientation_control.hpp  example_robot.cpp  example_robot.hpp  example_waypoints.cpp  example_waypoints.hpp  interaction_handle.cpp  interaction_handle.h  interactive_blender.cpp  interactive_blender.h  interactive_compound_objectives.cpp  interactive_compound_objectives.h  interactive_compounds.cpp  interactive_compounds.h  joint_damping_objective.cpp  planar_distance.cpp  planar_distance.h  planar_orientation_objective.cpp  planar_orientation_objective.h  planar_robot.cpp  planar_robot.h
doc/: kinematic_elastic.bib  kinematic_elastic.tex
include/kinematic_objectives/: achievability.h  blender.h  compound_objective.h  constraint_bouncing_blender.h  constraint_teleporting_blender.h  distance_model.h  e2_integrator.h  integrator.h  joint_damping_objective.h  joint_limit_objective.h  joint_position_objective.h  kinematic_model.h  kinematic_objectives.h  link_position_objective.h  objective.h  obstacle_objective.h  pd_controller.h  pd_integrator.h  pd_objective.h  point_attraction_objective.h  point_repulsion_objective.h  print.h  prioritization.h  pseudo_inverse.h  task_blender.h  types.h  unconstrained_blender.h  util.h
src/: achievability.cpp  blender.cpp  compound_objective.cpp  constraint_bouncing_blender.cpp  constraint_teleporting_blender.cpp  e2_integrator.cpp  integrator.cpp  joint_damping_objective.cpp  joint_limit_objective.cpp  joint_position_objective.cpp  kinematic_model.cpp  kinematic_objectives.cpp  link_position_control.cpp  link_position_objective.cpp  objective.cpp  obstacle_objective.cpp  pd_integrator.cpp  pd_objective.cpp  point_attraction_objective.cpp  point_repulsion_objective.cpp  print.cpp  prioritization.cpp  pseudo_inverse.cpp  task_blender.cpp  unconstrained_blender.cpp  util.cpp
